--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,9 @@ spring:
     show-sql: true
     # DDL 정의시 데이터베이스의 고유 기능을 사용합니다.
     # ex) 테이블 생성, 삭제 등
-    generate-ddl: true
+    # generate-ddl: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/lim_db?serverTimezone=UTC&characterEncoding=UTF-8
-    username: aa
-    password: aa
-
-logging:
-  config: classpath:log4j2.yml
+    username: limintae
+    password: limdb7897
