--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,16 @@ spring:
     # DDL 정의시 데이터베이스의 고유 기능을 사용합니다.
     # ex) 테이블 생성, 삭제 등
     # generate-ddl: true
+    properties:
+      hibernates:
+        format-sql: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/lim_db?serverTimezone=UTC&characterEncoding=UTF-8
     username: limintae
     password: limdb7897
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
+      multiline: true
