--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,14 +18,9 @@ spring:
     # generate-ddl: true
     properties:
       hibernates:
-        format-sql: false
+        format-sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/lim_db?serverTimezone=UTC&characterEncoding=UTF-8
     username: limintae
     password: limdb7897
-decorator:
-  datasource:
-    p6spy:
-      enable-logging: true
-      multiline: true
